add admin authentication, role-based security, and APIs tests with Postman